Revert "Fixed z-index in nav bar"
This reverts commit 30b4fd3f6582f9e5b3ef70caedd7e914040087cc.

--- a/style/main.css
+++ b/style/main.css
@@ -180,7 +180,6 @@ nav{
     color: white;
     box-shadow: 0 0 5px 0px black;
     position: sticky;
-    z-index: 1;
     top: 0;
 }
 
